# xbian-sources-xbmc

./: .gitmodules  CMakeLists.txt  Makefile.in  Makefile.python-interfaces  codegenerator.mk  configure.ac  configure.in  empty  version.txt
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
Kodi.xcodeproj/: project.pbxproj
addons/screensaver.gles.ball/: addon.xml
addons/screensaver.gles.noise/: addon.xml
addons/screensaver.gles.plasma/: addon.xml
addons/screensaver.gles.plasma2/: addon.xml
addons/screensaver.gles.solarwinds/: addon.xml
addons/screensaver.gles.spiral/: addon.xml
addons/screensaver.gles.stellar/: addon.xml
addons/screensaver.gles.warp/: addon.xml
docs/: README.md
m4/: xbmc_arch.m4
system/: addon-manifest.xml  peripherals.xml
xbmc/: AppParamParser.cpp  AppParamParser.h  Application.cpp  Application.h  ApplicationMessenger.cpp  ApplicationMessenger.h  ApplicationPlayer.cpp  ApplicationPlayer.h  DatabaseManager.cpp  DllPaths_generated.h.in  DllPaths_generated_android.h.in  FileItem.cpp  FileItem.h  GUIInfoManager.cpp  GUIInfoManager.h  GUILargeTextureManager.cpp  PlayListPlayer.cpp  SystemGlobals.cpp  TextureCache.cpp  TextureCacheJob.cpp  URL.cpp  Util.cpp  system.h  xbmc.cpp
xbmc/windowing/gbm/: CMakeLists.txt  DRMAtomic.cpp  DRMAtomic.h  GBMUtils.cpp  GBMUtils.h  VNCServer.cpp  VNCServer.h  WinSystemGbm.cpp  WinSystemGbm.h  WinSystemGbmEGLContext.cpp  WinSystemGbmGLESContext.cpp  WinSystemGbmGLESContext.h
xbmc/windowing/gbm/drm/: DRMAtomic.cpp  DRMAtomic.h  DRMObject.cpp  DRMObject.h  ScreenshotSurfaceDRM.cpp
(+533 files in other folders)
